src/PJ/poco/test/pos/PSTRUC03.POC
/* see what happens when you have extra semicolons inside a structure */
/* (also excerise name space rules a bit, just for grins) */
#pragma poco echo "expect>Success"

struct foobar
	{
	int foo;;
	char bar;
	} foobar;

main()
{
int foobar;
printf("Success");
}
