src/pj/poco/test/neg/NSTRUC11.POC
/* Make sure struct handles missing closing brace */
#pragma poco echo "expect>function prototypes only allowed outside function declarations."

struct foobar
	{
	int foo;
	char bar;
	;

main()
{
puts("This shouldn't compile");
}
